# Curve

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib_src/: curve.cpp  curve.hpp
src/: curve.cpp  curve.hpp
